# format

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
format/: format.cpp  format.hpp
test/: CMakeLists.txt  format_test.cpp
